Fix width of search field on mobile

--- a/stocksearch/src/app/stock-search/stock-search.component.css
+++ b/stocksearch/src/app/stock-search/stock-search.component.css
@@ -34,3 +34,9 @@
 #searchInput {
     vertical-align: middle;
 }
+
+@media screen and (max-width: 600px) {
+    #searchfield {
+        width: 70%;
+    }
+}
